--- a/src/components/BubbleMenu/BubbleMenu.module.scss
+++ b/src/components/BubbleMenu/BubbleMenu.module.scss
@@ -1,22 +1,28 @@
 .menu-container {
   position: fixed;
+  z-index: 100;
   top: 0px;
   padding-top: 80px;
   box-sizing: border-box;
   width: 100vw;
   height: 100vh;
-  transition: background-color 300ms ease-in-out;
   &[data-status="visible"] {
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 1;
+    animation: show-background 300ms ease-in-out forwards;
     ul li {
       opacity: 1;
       transform: translateX(0px);
     }
   }
   &[data-status="hidden"] {
+    animation: hide-background 300ms ease-in-out forwards;
+    ul li {
+      opacity: 0;
+      transform: translateX(-110px);
+    }
+  }
+  &[data-status="idle"] {
+    width: 0vw;
     background-color: transparent;
-    z-index: -1;
     ul li {
       opacity: 0;
       transform: translateX(-110px);
@@ -65,7 +71,7 @@
 
 .menu-button {
   position: fixed;
-  z-index: 2;
+  z-index: 101;
   top: 30px;
   left: 10px;
   width: 50px;
@@ -109,5 +115,35 @@
   &:active {
     transform: translate(1px, 1px);
     box-shadow: 1px 1px 2px rgba(90, 90, 90, 0.3);
+  }
+}
+
+@keyframes show-background {
+  0% {
+    background-color: transparent;
+    width: 0vw;
+  }
+  1% {
+    background-color: transparent;
+    width: 100vw;
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100vw;
+  }
+}
+
+@keyframes hide-background {
+  0% {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100vw;
+  }
+  99% {
+    background-color: transparent;
+    width: 100vw;
+  }
+  100% {
+    background-color: transparent;
+    width: 0vw;
   }
 }
