fix (CalendarDatePicker) :falla al hacer scroll en pantallas touch

--- a/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
+++ b/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
@@ -35,6 +35,7 @@
   font-weight: 600;
   font-style: normal;
   line-height: normal;
+  -webkit-tap-highlight-color: transparent;
   .title {
     position: relative;
     display: flex;
