--- a/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
+++ b/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
@@ -53,6 +53,7 @@
     border: solid 2px #787878;
     border-radius: 6px;
     padding: 4px 8px;
+    font-size: 20px;
     background-color: white;
     color: #787878;
     transition: all 0.1s ease-in-out;
@@ -77,7 +78,8 @@
       background-color: transparent;
       border: transparent;
       text-align: right;
-      font-size: 18px;
+      font-size: 24px;
+      margin-right: 10px;
       color: #959595;
       cursor: pointer;
       &:focus {
