style (IntegerControl) : -webkit-tap-highlight-color

--- a/src/components/IntegerControl/IntegerControl.module.scss
+++ b/src/components/IntegerControl/IntegerControl.module.scss
@@ -1,6 +1,7 @@
 .integer-control {
   display: flex;
   align-items: center;
+  -webkit-tap-highlight-color: transparent;
   button {
     border: none;
     background: none;
