--- a/src/components/InputBoxWithConfirmation/InputBoxWithConfirmation.module.scss
+++ b/src/components/InputBoxWithConfirmation/InputBoxWithConfirmation.module.scss
@@ -7,6 +7,7 @@
   background-color: rgb(250, 250, 250);
   border-radius: 8px;
   transition: border 0.3s;
+  cursor: text;
   &.focused {
     border-color: #218dec;
   }
