--- a/src/components/Multicalendar/subcomponents/individuals/DatesRow/DatesRow.module.scss
+++ b/src/components/Multicalendar/subcomponents/individuals/DatesRow/DatesRow.module.scss
@@ -25,7 +25,7 @@
         align-items: center;
         div {
           border-radius: 4px;
-          background: var(--primary-color);
+          background: var(--primary-color, dimgray);
           color: rgb(255, 255, 255);
           font-size: 14px;
           line-height: 18px;
@@ -34,11 +34,11 @@
           height: 40px;
           padding: 1px 0;
         }
-        p {
-          margin: 0;
-          font-size: 14px;
-          line-height: 18px;
-        }
+      }
+      p {
+        margin: 0;
+        font-size: 14px;
+        line-height: 18px;
       }
     }
     .month-start {
