--- a/src/components/StackedCards/StackedCards.module.scss
+++ b/src/components/StackedCards/StackedCards.module.scss
@@ -1,30 +1,30 @@
 .stacked-cards {
   position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   .card {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 80%;
     height: 80%;
     background-color: #fff;
     border-radius: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid #e2e2e2;
     transition: all 0.4s ease-out;
+    .title {
+      width: 100%;
+      overflow: hidden;
+    }
     .content {
-      opacity: 1;
-      transition: opacity 0.6s ease-out;
+      flex-grow: 1;
+      width: 100%;
+      overflow: auto;
     }
     &[data-is-selectable="true"] {
       cursor: pointer;
       &[data-should-card-rise="true"]:hover {
         transform: translateY(-20px);
-      }
-      .content {
-        opacity: 0;
       }
     }
   }
