--- a/src/components/ScrollSnapGallery/ScrollSnapGallery.module.scss
+++ b/src/components/ScrollSnapGallery/ScrollSnapGallery.module.scss
@@ -14,12 +14,14 @@
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    -webkit-user-select: none;
     user-select: none;
     &::-webkit-scrollbar {
       display: none;
     }
     img {
       scroll-snap-align: center;
+      min-width: 100%;
       width: 100%;
       height: 100%;
       object-fit: cover;
