--- a/src/components/ScreenSteps/ScreenSteps.module.scss
+++ b/src/components/ScreenSteps/ScreenSteps.module.scss
@@ -14,12 +14,11 @@
       width: 62px;
       height: 62px;
       border-radius: 31px;
-      background-color: #959595;
+      background-color: hsla(0, 0%, 58%, 0.2);
       display: flex;
       align-items: center;
       justify-content: center;
-      opacity: 0.2;
-      color: #000000;
+      color: rgba(65, 65, 65, 0.4);
       text-align: center;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 15px;
@@ -29,14 +28,12 @@
       cursor: pointer;
       transition: all 300ms ease-in-out;
       &.completed {
-        opacity: 0.4;
-        background-color: #705a00;
-        color: #000000;
+        background-color: rgba(112, 90, 0, 0.4);
+        color: rgba(65, 65, 65, 0.4);
       }
       &.current {
-        opacity: 0.4;
-        background-color: #705a00;
-        color: #000000;
+        background-color: rgba(112, 90, 0, 0.6);
+        color: rgba(65, 65, 65, 1);
       }
     }
   }
