--- a/src/components/LabeledInput/LabeledInput.module.scss
+++ b/src/components/LabeledInput/LabeledInput.module.scss
@@ -20,8 +20,9 @@
     left: 28px;
     padding: 0;
     transition: all 200ms ease-in-out;
+    -webkit-user-select: none;
     user-select: none;
-    &.focused {
+    &[data-is-shrinked='true'] {
       top: 2px;
       left: 10px;
       font-weight: 600;
