--- a/src/components/ScreenSteps/ScreenSteps.module.scss
+++ b/src/components/ScreenSteps/ScreenSteps.module.scss
@@ -55,5 +55,11 @@
       justify-content: flex-start;
       transition: all 300ms ease-in-out;
     }
+    .step-component{
+      max-height: 0px;
+      &[data-is-current="true"] {
+        max-height: max-content;
+      }
+    }
   }
 }
